--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -60,13 +60,24 @@ This box plot shows that the skill players seem to be able to do more pushups in
 ```{r}
 favstats(pushups~position,data=mydata)
 ```
+The numerical results show that the skill position players median number of pushups in 2 minutes is more than double that of the line position players.
 
 ## Inferential Results
 
 <!--State hypothesis clearly. Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc. Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
 
+  
+```{r}
+t.test(pushups~position,data=mydata)
+```
+The p-value is 0.0000009; thus $H_0$ is highly unlikely; we reject the null hypothesis
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here. If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason. Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
 
+The original question was, "Do players on the football team in line and skill positions do on average the same number of pushups in 2 minutes?"
+
+Both the graphical and numerical summaries showed the skill position players did, on average, more pushups in 2 minutes than did the line players.
+
+And the result is significant; too unlikely to have occurred by chance; we conclude that at least for Georgetown players the skill position players do more pushups. 
